--- a/styles/main.css
+++ b/styles/main.css
@@ -5,41 +5,60 @@ body {
 #json-obj {
     text-align: center;
     width: 75%;
-    margin: 20px auto;
-    margin-top: 50px;
-    padding: 10px;
+    margin: auto;
+    margin-top: 2em;
+    padding: 1em;
     font-size: 2em;
     background-color: darkolivegreen;
 }
 
-.content {
-    /* padding: 10px; */
-}
-
 .user-interact {
     width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    margin: 2em auto;
     font-size: 2em;
+    text-align: center;
 }
 
-.input-box {
-    width: 3em;
-    margin: 0.5em;
-    padding: 5px 0;
-    padding-left: 0.5em;
+.number-input-box {
+    width: 2.5em;
+    padding-left: 0.25em;
     padding-right: 0.1em;
     font-size: 1em;
 }
 
 #get-joke-btn {
-    text-align: center;
     font-size: 1em;
-    padding: 5px 20px;
+    padding: 0.15em 0.75em;
+    margin-left: 0.5em;
     border: none;
     background-color: white;
     border-radius: 99999999px;
+}
+
+.optional {
+    width: 75%;
+    margin: auto;
+    text-align: center;
+    font-size: 1.75em;
+}
+
+.input-field {
+    margin-top: 1.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.75em;
+}
+
+.name-input-field {
+    margin: 0 0.25em;
+}
+
+.text-input-box {
+    font-size: 1em;
+    padding-left: 0.25em;
+    padding-right: 0.1em;
+    width: 6em
 }
 
 #get-joke-btn:hover, #get-joke-btn:focus, #get-joke-btn:active {
