--- a/styles/main.css
+++ b/styles/main.css
@@ -1,20 +1,21 @@
 body {
-    background-color: gray;
-}
-
-#json-obj {
-    text-align: center;
-    width: 75%;
-    margin: auto;
-    margin-top: 2em;
-    padding: 1em;
-    font-size: 2em;
-    background-color: darkolivegreen;
+    background-color: #FCEFE7;
+    color: #444343;
+    font-size: 1em;
+    margin: 0;
 }
 
 .user-interact {
+    position: fixed;
+    z-index: 1;
     width: 100%;
-    margin: 2em auto;
+    background-color: #FCEFE7;
+}
+
+.main-interact-field {
+    width: 75%;
+    margin: 1em auto;
+    margin-bottom: 0.75em;
     font-size: 2em;
     text-align: center;
 }
@@ -26,24 +27,16 @@ body {
     font-size: 1em;
 }
 
-#get-joke-btn {
-    font-size: 1em;
-    padding: 0.15em 0.75em;
-    margin-left: 0.5em;
-    border: none;
-    background-color: white;
-    border-radius: 99999999px;
-}
-
 .optional {
     width: 75%;
     margin: auto;
+    margin-bottom: 1.145em;
     text-align: center;
     font-size: 1.75em;
 }
 
 .input-field {
-    margin-top: 1.5em;
+    margin-top: 0.775em;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -61,17 +54,70 @@ body {
     font-size: 1em;
 }
 
-#get-joke-btn:hover, #get-joke-btn:focus, #get-joke-btn:active {
-    cursor: pointer;
-    outline: none;
-    background-color: black;
-    color: white;
+h1 {
+    margin: 0 auto;
+    text-align: center;
+    width: 75%;
+    padding: 0.15em 0;
+    background-color: #fad291;
+    box-shadow: 0 1px 1px -1px #444343;
+
+}
+
+.result-field {
+    position: relative;
+    top: 16.25em;
+    margin: 2em auto;
+    margin-top: 0;
+    text-align: center;
+    width: 75%;
+}
+
+.temp {
+    text-align: center;
+    display: block;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
+}
+
+#json-obj {
+    margin: 0;
+    padding: 0.5em;
+    font-size: 2em;
+    background-color: #B1E1E2;
+}
+
+.joke {
+    text-align: left;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: 2em;
+}
+
+#get-joke-btn {
+    font-size: 1em;
+    padding: 0.15em 0.75em;
+    margin-left: 0.5em;
+    border: none;
+    background-color: #fcb5c2;
+    color: #444343;
+    border-radius: 99999999px;
 }
 
 #get-joke-btn:focus {
-    box-shadow: 0 0 3px 2px blue;
+    box-shadow: 0 0 2px 1px #444343;
+    outline: none;
+}
+
+#get-joke-btn:hover {
+    cursor: pointer;
+    outline: none;
+    background-color: #eeacb8;
+    box-shadow: 0 0 2px 1px #444343;
 }
 
 #get-joke-btn:active {
-    background-color: white;
+    background-color: #e0a1ad;
+    outline: none;
+    box-shadow: none;
 }
